v2.7.8.1
- Removed container OPTIN_2
- Removed container SHORTWELCOME_1

v2.7.8
+ [added] container ADVERTORIAL_CSS
+ [added] Article option ADD_PADDING_BOTTOM_IMAGE
+ added image max width in read.me
+ [added] container USER_CUSTOM_DATA_BACKGROUND_COLOR
+ [added] Article field CONTENT_CSS
+ moved top padding in main content table
+ [added] Article option FILL_PADDING_BACKGROUND_COLOR
+ Gmail mobile full width fix

v2.7.7
+ [added] container SHORTWELCOME_1
+ [added] container OPTIN_2
+ [added] probe 1000

v2.7.6
- fixed logo max width css

v2.7.5
+ [added] Container STYLES
- Removed the CSS from the section to the HTML Header in SIM properties

v2.7.4
+ [added] Article option ADD_PADDING_TOP
+ [added] Article option SUBTITLE_TOP_PADDING

v2.7.3
+ [added] container ADVERTORIAL_TEXT_CSS

v2.7.2
+ [added] Article options :
SOCIAL_FB
SOCIAL_TWITTER
SOCIAL_INSTAGRAM
SOCIAL_YOUTUBE
SOCIAL_PINTEREST
SOCIAL_WHATSAPP
SOCIAL_GOOGLEPLUS
SOCIAL_MAIL
+ [added] container SHARE_FB_ICON
+ [added] container SHARE_TWITTER_ICON
+ [added] container SHARE_INSTAGRAM_ICON
+ [added] container SHARE_YOUTUBE_ICON
+ [added] container SHARE_PINTEREST_ICON
+ [added] container SHARE_WHATSAPP_ICON
+ [added] container SHARE_GOOGLEPLUS_ICON
+ [added] container SHARE_MAIL_ICON

v2.7.1
- [removed] container CLOSE_ALERT_COLOR
+ [added] container CLOSE_ALERT_CSS
+ [added] container CLOSE_ALERT_TEXT_COLOR
+ [added] container CLOSE_ALERT_TEXT_CSS
+ [added] container WRAPPER_CSS
+ [added] container WRAPPER_BACKGROUND_COLOR

v2.6.4.1 / v2.6.4.2
+ [added] container LOGO_ALIGN
+ [added] container CLOSE_ALERT_TEXT
+ [added] container CLOSE_ALERT_URL
- optional to show/hide unsubscribe text
- custom header text
- max 600px header Outlook

v2.6.4
- [added] article option TITLE_TOP_PADDING
- [added] article field LINK_TEXT_FONTSIZE
- [added] article field BUTTON_PADDING
- [added] article field BUTTON_OUTLOOK_CSS
- [added] article field BUTTON_WEBVERSION_CSS
- better css control on title and subtitle

v2.6.3