@@ -1034,39 +1034,6 @@
             <!-- End Custom Footer -->
           </div>
 
-        <div contenteditable="false" id="MASECTION" maconstraint="DYNCONTENT.CLOSE_ALERT_TEXT <> ''" mahidediv="TRUE" maparameter="">
-          <!-- Begin Close alert -->
-
-          <div contenteditable="false" id="MASECTION" maconstraint="ID=0" mahidediv="TRUE" maparameter="">
-            <div contenteditable="false" id="MASECTION" maconstraint="DYNCONTENT.CLOSE_ALERT_URL = ''" mahidediv="TRUE" maparameter="">
-              <p style="background-color:#ff0000;padding:10px;color:#FFFFFF;">
-                <strong>Warning!</strong><br>
-                The close alert url is not set yet!
-              </p>
-            </div>
-          </div>
-
-          <div contenteditable="false" id="MASECTION" maconstraint="DYNCONTENT.CLOSE_ALERT_URL <> ''" mahidediv="TRUE" maparameter="">
-            <br>
-            <table class="outer" style="Margin: 0 auto; width: 100%; max-width: 600px;~DYNCONTENT.CLOSE_ALERT_CSS~" cellspacing="0" cellpadding="0" border="0" align="center">
-                 <!-- Begin Article --><!-- Begin Half width start hacks --><!-- Begin start first half width outlook hack -->
-                  <tbody><tr><td class="thirdWidth" style="padding:0px;text-align: center;font-size: 0;">
-                           <!--[if (gte mso 9)|(IE)]><TABLE  WIDTH="100%" BORDER="0" CELLSPACING="0" CELLPADDING="0" ><tr><td valign="top" width="400" style="padding:0px;"><![endif]--><!-- End start first half width outlook hack --><!-- End Half width start hacks --><div class="column twothirdWidth mobileFullwidth" style="width:100%;max-width:400px;display:inline-block;vertical-align: top;"><!-- Begin column --><table width="100%" cellspacing="0" cellpadding="0" border="0"><tbody><tr><td style="padding-left:10px;padding-right:10px;"><table style="" valign="top" width="100%" cellspacing="0" cellpadding="0" border="0"><tbody><tr><td><!-- Begin TITLE_IMAGE --><!-- END TITLE_IMAGE --><!-- Begin content -->
-                           <table width="100%" cellspacing="0" cellpadding="0" border="0" style="padding-top:3px;"><tbody><tr><td style="padding-left:10px;padding-right:10px;font-family:Arial,helvetica,sans-serif;font-size:16px;line-height:1.4;-webkit-text-size-adjust:none;" valign="middle" align="center"><span class="webfont" style="color:#~(IF(DYNCONTENT.CLOSE_ALERT_TEXT_COLOR ='','000001',DYNCONTENT.CLOSE_ALERT_TEXT_COLOR))~ !important;font-size:18px;font-weight:bold;~DYNCONTENT.CLOSE_ALERT_TEXT_CSS~"><font color="#~(IF(DYNCONTENT.CLOSE_ALERT_TEXT_COLOR ='','000001',DYNCONTENT.CLOSE_ALERT_TEXT_COLOR))~">~DYNCONTENT.CLOSE_ALERT_TEXT~</font></span></td></tr></tbody></table><!-- End content --></td></tr></tbody></table></td></tr></tbody></table><!-- End column --></div><!-- Begin Half width end hacks --><!-- End Half width end hacks --><!-- End article --><!-- Begin Article --><!-- Begin Half width start hacks --><!-- Begin second half width outlook hack --><!--[if (gte mso 9)|(IE)]></td><td valign="top" width="200" style="padding:0px;"><![endif]--><!-- End second half width outlook hack --><!-- End Half width start hacks --><div class="column mobileFullwidth" style="width:100%;max-width:200px;display:inline-block;vertical-align: top;"><!-- Begin column --><table width="100%" cellspacing="0" cellpadding="0" border="0"><tbody><tr><td style="padding-left:10px;padding-right:10px;"><table style="" valign="top" width="100%" cellspacing="0" cellpadding="0" border="0"><tbody><tr><td><!-- Begin TITLE_IMAGE --><!-- END TITLE_IMAGE --><!-- Begin content -->
-                          <table width="100%" cellspacing="0" cellpadding="0" border="0"><tbody><tr><td style="padding-left:10px;padding-right:10px;font-family:Arial,helvetica,sans-serif;font-size:16px;line-height:1.4;-webkit-text-size-adjust:none;" valign="top" align="center">
-                           <a href="~PROBE(400)~" target="_blank"><img src="https://placeholdit.imgix.net/~text?w=37&h=37" alt="Like" height="36" width="37" border="0"/></a>
-                           &nbsp;
-                           <a href="~PROBE(401)~" target="_blank"><img src="https://placeholdit.imgix.net/~text?w=37&h=37" alt="Dislike" height="36" width="37" border="0"/></a>
-                         </td></tr></tbody></table><!-- End content --></td></tr></tbody></table></td></tr></tbody></table><!-- End column --></div><!-- Begin Half width end hacks --><!-- Begin second half width outlook hacks --><!--[if (gte mso 9)|(IE)]></td></tr></table><![endif]-->
-                            </td></tr>
-                            <!-- End second half width outlook hacks --><!-- End Half width end hacks --><!-- End article -->
-                 </tbody>
-            </table>
-          </div>
-
-          <!-- End Close alert -->
-        </div>
-
 	   <!-- Begin normal footer -->
        <table cellpadding="0" cellspacing="0" border="0" align="center" class="outer" style="Margin: 0 auto; width: 100%; max-width: 600px;">
          <tr>
