@@ -95,46 +95,6 @@
       </tr>
 
       <tr style="~(IF(DYNCONTENT.USER_CUSTOM_DATA_BACKGROUND_COLOR='','','background-color:#'&DYNCONTENT.USER_CUSTOM_DATA_BACKGROUND_COLOR&';'))~">
-        <td><h2>Close alert url</h2></td>
-        <td valign="top">
-          <h3>~DYNCONTENT.CLOSE_ALERT_URL~</h3>
-          <div id="masection" contenteditable="true" maconstraint="ID=0" maparameter="CLOSE_ALERT_URL" mahidediv="TRUE"></div>
-        </td>
-      </tr>
-
-      <tr style="~(IF(DYNCONTENT.USER_CUSTOM_DATA_BACKGROUND_COLOR='','','background-color:#'&DYNCONTENT.USER_CUSTOM_DATA_BACKGROUND_COLOR&';'))~">
-        <td><h2>Close alert text</h2></td>
-        <td valign="top">
-          <h3>~DYNCONTENT.CLOSE_ALERT_TEXT~</h3>
-          <div id="masection" contenteditable="true" maconstraint="ID=0" maparameter="CLOSE_ALERT_TEXT" mahidediv="TRUE"></div>
-        </td>
-      </tr>
-
-      <tr style="~(IF(DYNCONTENT.USER_CUSTOM_DATA_BACKGROUND_COLOR='','','background-color:#'&DYNCONTENT.USER_CUSTOM_DATA_BACKGROUND_COLOR&';'))~">
-        <td><h2>Close alert text color</h2></td>
-        <td valign="top">
-          <h3>~DYNCONTENT.CLOSE_ALERT_TEXT_COLOR~</h3>
-          <div id="masection" contenteditable="true" maconstraint="ID=0" maparameter="CLOSE_ALERT_TEXT_COLOR" mahidediv="TRUE"></div>
-        </td>
-      </tr>
-
-      <tr style="~(IF(DYNCONTENT.USER_CUSTOM_DATA_BACKGROUND_COLOR='','','background-color:#'&DYNCONTENT.USER_CUSTOM_DATA_BACKGROUND_COLOR&';'))~">
-        <td><h2>Close alert text css</h2></td>
-        <td valign="top">
-          <h3>~DYNCONTENT.CLOSE_ALERT_TEXT_CSS~</h3>
-          <div id="masection" contenteditable="true" maconstraint="ID=0" maparameter="CLOSE_ALERT_TEXT_CSS" mahidediv="TRUE"></div>
-        </td>
-      </tr>
-
-      <tr style="~(IF(DYNCONTENT.USER_CUSTOM_DATA_BACKGROUND_COLOR='','','background-color:#'&DYNCONTENT.USER_CUSTOM_DATA_BACKGROUND_COLOR&';'))~">
-        <td><h2>Close alert css</h2></td>
-        <td valign="top">
-          <h3>~DYNCONTENT.CLOSE_ALERT_CSS~</h3>
-          <div id="masection" contenteditable="true" maconstraint="ID=0" maparameter="CLOSE_ALERT_CSS" mahidediv="TRUE"></div>
-        </td>
-      </tr>
-
-      <tr style="~(IF(DYNCONTENT.USER_CUSTOM_DATA_BACKGROUND_COLOR='','','background-color:#'&DYNCONTENT.USER_CUSTOM_DATA_BACKGROUND_COLOR&';'))~">
         <td><h2>Background image</h2></td>
         <td valign="top">
           <div id="masection" contenteditable="true" maconstraint="DYNCONTENT.BACKGROUND_IMAGE <> ''" maparameter="" mahidediv="TRUE">
